tests/paczka1/small_fuzzy/26045509.err
Error in line 7: Zmfhw360 A689 60,9
Error in line 1: 77S S628 62,2
